# tr-scraping

./: README.md  package.json  pnpm-lock.yaml  setting.schema.json  tsconfig.json  vite.config.ts
sample/: crawler.json  output_template.html  scraping.json  setting.schema.json
src/: App.tsx  api.ts  bindings.ts  bindings_etc.ts  models.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crawler.rs  lib.rs  main.rs  models.rs  scraping.rs  utils.rs
src-tauri/src/iters/: glob_json_pattern_iter.rs  glob_json_range_pattern_iter.rs  mod.rs  pattern_iter.rs  range_iter.rs  range_pattern_iter.rs  vec_iter.rs
src-tauri/src/tasks/: csv_task.rs  html_task.rs  http_task.rs  mod.rs  shell_task.rs  task.rs
src/assets/: main-pane.css
src/components/: DraggableStep.tsx  DroppableStep.tsx  MainPane.tsx  SettingView.tsx
src/store/: settingPathStore.ts  settingTextStore.ts
