[package]
name = "tr-crawler"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tr_crawler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.0.2", features = ["indexmap2"] }
tauri-plugin-dialog = "2"
petgraph = { version = "0.8.2" }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros",  "fs", "io-util", "sync"] }
reqwest = { version = "0.12.20", features = ["json"] }
encoding_rs = "0.8.35"
chardetng = "0.1.17"
infer = "0.19.0"
mime_guess = "2.0.5"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript", "javascript"] }
specta= { version = "2.0.0-rc.21"}
specta-typescript = { version = "0.0.9"}
handlebars = { version = "6.3.2" }
thiserror = "2.0.12"
serde_with = "3.13.0"
futures = "0.3.31"
glob = "0.3.2"
async-stream = "0.3.6"
tokio-stream = { version = "0.1.17"}
jsonpath_lib = "0.3.0"
itertools = "0.14.0"
sanitize-filename = "0.6.0"
mime = "0.3.17"
chrono = "0.4.41"
